# meander

./: Cargo.toml  IMPROVEMENT_PLAN.md  README.md
.github/workflows/: ci.yml
crates/meander/: Cargo.toml  README.md
crates/meander-gharial/: Cargo.toml  README.md
crates/meander-gharial/src/: ipc.rs  lib.rs  status.rs
crates/meander/benches/: frame.rs
crates/meander/src/: buffer_layout.rs  canvas.rs  color.rs  error.rs  event.rs  font.rs  input.rs  lib.rs  output.rs  runtime.rs  shm.rs  shm_format.rs  surface.rs
crates/meander/src/runtime/: caps.rs  dispatch.rs  mod.rs
examples/bar/: Cargo.toml
examples/bar/src/: main.rs
