[workspace]
resolver = "2"
members = [
    "crates/meander",
    "crates/meander-gharial",
    "examples/bar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["gusahlg"]
repository = "https://github.com/gusahlg/meander"
rust-version = "1.75"

[workspace.dependencies]
meander = { path = "crates/meander" }
meander-gharial = { path = "crates/meander-gharial" }

wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rustix = { version = "1.1", features = ["fs", "mm", "event", "pipe"] }
bitflags = "2.6"
tiny-skia = "0.11"
fontdue = "0.9"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
