[workspace]
resolver = "2"
members = [
    "crates/meander",
    "crates/meander-gharial",
    "examples/bar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["gusahlg"]
repository = "https://github.com/gusahlg/meander"
rust-version = "1.75"

[workspace.dependencies]
meander = { path = "crates/meander" }
meander-gharial = { path = "crates/meander-gharial" }

wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rustix = { version = "1.1", features = ["fs", "mm", "event"] }
bitflags = "2.6"
# tiny-skia's default `png-format` feature pulls in `png`/`miniz-oxide`; meander
# only rasterises into caller-owned buffers, so keep just `std` + `simd`.
tiny-skia = { version = "0.11", default-features = false, features = ["std", "simd"] }
fontdue = "0.9"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
