[package]
name = "meander"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Low-level Wayland desktop UI toolkit for river/gharial."
keywords = ["wayland", "layer-shell", "gui", "bar", "wlroots"]
categories = ["gui", "os::unix-apis"]

[dependencies]
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true
rustix.workspace = true
bitflags.workspace = true
tiny-skia.workspace = true
fontdue.workspace = true
thiserror.workspace = true

[[bench]]
name = "frame"
harness = false
