[package]
name = "meander-example-bar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A minimal river/gharial status bar built with meander."
publish = false

[[bin]]
name = "meander-bar"
path = "src/main.rs"

[dependencies]
meander.workspace = true
meander-gharial.workspace = true
